# backtest_engine

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backtest_engine/: __init__.py  __main__.py  config.py  distribution.py  errors.py  protocols.py  quality.py  release.py
backtest_engine/adapters/: __init__.py  generated_strategy.py  generated_strategy_context.py  generated_strategy_errors.py
backtest_engine/batch/: __init__.py  job.py  process_pool.py  runner.py  shared_data.py  thread_pool.py
backtest_engine/broker/: __init__.py  commission.py  fill_simulator.py  rounding.py  slippage.py
backtest_engine/cli/: main.py
backtest_engine/context/: __init__.py  command_buffer.py  strategy_context.py  strategy_state_view.py
backtest_engine/core/: __init__.py  backend_result.py  bar_runner.py  clock.py  deterministic_hash.py  early_stop.py  engine.py  engine_realtime.py  engine_support.py  engine_validation.py  execution_backend_adapter.py  execution_mode.py  fill_execution.py  fill_scanner.py  lifecycle.py  margin_call.py  native_run_loop.py  oca.py  position_accounting.py  price_path.py  realtime.py  realtime_tick_loop.py  result_builder.py  resume_state.py  risk_rules.py  score_window.py  state_snapshot.py  strategy_command_processor.py  validation.py
backtest_engine/execution_backends/: __init__.py  base.py  pine_runtime.py
backtest_engine/ledger/: __init__.py  runup_drawdown.py
backtest_engine/models/: __init__.py  bar.py  bar_series.py  callbacks.py  diagnostic.py  equity.py  events.py  fill.py  instrument.py  (+8 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  RELEASE_4_0.md
scripts/: install.sh  release_gate.sh  smoke_import_parse.sh
(+71 files in other folders)
