[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "backtest-engine"
version = "2.17.0"
description = "Independent deterministic bar-by-bar backtest engine with TradingView/Pine strategy emulator semantics."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "MoltBot"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "build>=1.2"]

[project.scripts]
backtest = "backtest_engine.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false
allow_untyped_defs = true
ignore_errors = true
